fix font size for .feature-section on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -377,6 +377,7 @@ h2 {
 .feature-text {
   width: 90%;
   text-align: center;
+  font-size: 22px;
   color: #6600FF;
 }
 
